finish point 2 from hw 15

--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -27,17 +27,27 @@
         <tr>
             <th>ID</th>
             <th>Название товара</th>
+            <th>Цена</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="item : ${items}">
             <td th:text="${item.id}"/>
             <td th:text="${item.title}"/>
+            <td th:text="${item.price}"/>
             <td class="actions-column">
             </td>
         </tr>
         </tbody>
     </table>
+    <!-- Pagination -->
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:each="pageNumber : ${#numbers.sequence(0, totalPages - 1)}">
+                <a class="page-link" th:href="@{'/items?page=' + ${pageNumber}}" th:text="${pageNumber + 1}"></a>
+            </li>
+        </ul>
+    </nav>
 </div>
 </body>
 </html>
