--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
-    <title>Каталог товаров</title>
+    <title>Домашнее задание 15</title> <!-- Updated title -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -20,7 +20,38 @@
 </head>
 
 <body>
+
+<!-- Header section -->
+<div class="header-section">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Домашнее задание 15</h1>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
+    <form th:action="@{/items}" method="get" class="form-horizontal">
+        <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input th:value="${title != null ? title : ''}" name="title" placeholder="слово" class="form-control"/>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+            <input type="number" id="minPrice" name="minPrice" th:value="${minPrice != null ? minPrice : ''}"
+                   placeholder="минимальная цена" class="form-control"/>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+            <input type="number" id="maxPrice" name="maxPrice" th:value="${maxPrice != null ? maxPrice : ''}"
+                   placeholder="максимальная цена" class="form-control"/>
+        </div>
+        <div style="margin-top: 10px" class="form-group">
+            <div class="col-sm-6 controls">
+                <button type="submit" class="btn btn-primary">Фильтровать</button>
+            </div>
+        </div>
+    </form>
 
     <table class="table table-hover">
         <thead>
